--- a/index.html
+++ b/index.html
@@ -761,20 +761,21 @@
   <p>1편에서의 인기로 인해 2편에서의 분량이 대폭 늘어났다는 의혹 아닌 의혹이 있다.</p>
   <p>2편 시나리오가 절반 이상 풀린 후에야 생일과 풀네임이 공개되었다. 다만 그조차 본명과 실제 생월일이 아니라는 정보에 소소한 원성을 산 모양.</p>
 
----
+  ---
 
-### 각주
-[^1]: 작중에서 ‘배신 제의’를 뜻하는 마피아 은어.
-[^2]: 본래 클로 소사이어티의 협상자들은 내부 갈등의 중재만 도맡으나, 센트럴 로드의 북서부 침입이 위험 수위를 초과했다고 판단하고 예외적으로 샤오레이를 파견했다.
-[^3]: 기생오라비처럼 생겼다거나, 낯짝은 반반하다거나…
-[^4]: 兄弟(xiōngdì).
-[^5]: 源淸流淸. “윗물이 맑으면 아랫물도 맑다”. 윗사람이 청렴하면 아랫사람도 청렴해짐.
-[^6]: 작중에서 벗는 모습을 거의 볼 수 없을 정도. 고쳐 쓰는 모션 정도는 존재한다.
-[^7]: 삼각형 모양 귀걸이가 대표적으로, 그 외에도 여러 디자인을 가지고 있다고.
-[^8]: 단적인 예로, 1편 3챕터에서 플레이어가 달고 온 스파이를 **사살한 직후에도** 별 동요 없는 모습을 보였다.
-[^9]: 꽃말은 '명예', '영광'.
-[^10]: 외관의 유사성으로 인해 여동생이라는 가설이 유력.
-
+  <p>
+  ### 각주
+  [^1]: 작중에서 ‘배신 제의’를 뜻하는 마피아 은어.<br>
+  [^2]: 본래 클로 소사이어티의 협상자들은 내부 갈등의 중재만 도맡으나, 센트럴 로드의 북서부 침입이 위험 수위를 초과했다고 판단하고 예외적으로 샤오레이를 파견했다.<br>
+  [^3]: 기생오라비처럼 생겼다거나, 낯짝은 반반하다거나…<br>
+  [^4]: 兄弟(xiōngdì).<br>
+  [^5]: 源淸流淸. “윗물이 맑으면 아랫물도 맑다”. 윗사람이 청렴하면 아랫사람도 청렴해짐.<br>
+  [^6]: 작중에서 벗는 모습을 거의 볼 수 없을 정도. 고쳐 쓰는 모션 정도는 존재한다.<br>
+  [^7]: 삼각형 모양 귀걸이가 대표적으로, 그 외에도 여러 디자인을 가지고 있다고.<br>
+  [^8]: 단적인 예로, 1편 3챕터에서 플레이어가 달고 온 스파이를 **사살한 직후에도** 별 동요 없는 모습을 보였다.<br>
+  [^9]: 꽃말은 '명예', '영광'.<br>
+  [^10]: 외관의 유사성으로 인해 여동생이라는 가설이 유력.<br>
+  </p>
 
   <p class="small">
     이 문서는 팬메이드 자캐 문서이며, 실제로 존재하는 게임 및 웹사이트가 아닙니다.
