--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     .name-kor {
       font-size: 20px;
       font-weight: 700;
-      color: #ffd54a;
+      color: #31e1db;
       margin-bottom: 3px;
     }
 
@@ -199,7 +199,7 @@
       margin: 12px 0 4px 0;
       border-bottom: 1px dashed #555;
       padding-bottom: 2px;
-      color: #31e1db;
+      color: #79ebbb;
     }
 
     p { margin: 4px 0 8px 0; }
@@ -433,7 +433,7 @@
       <tr>
         <th>등장 작품</th>
         <td>
-          <a href="https://sawa1023.github.io/FALL-OF-TITAN/"
+          <a href="https://dante-403.github.io/TheBackstreet/"
              class="green-link" target="_blank">
              The Back street: Omertà<br>The Back street: Vendetta
           </a>
@@ -441,12 +441,12 @@
       </tr>
 
       <tr><th>소속</th><td>클로 소사이어티 / C.S<br>하르모니아 (Harmonia)<br>화조방 (化雕幇)</td></tr>
-      <tr><th>직책</th><td>화조방 간부<br>클로 소사이어티 협상자 No.2</td></tr>
+      <tr><th>직책</th><td>화조방 간부<br>클로 소사이어티 협상자 No.21</td></tr>
       <tr><th>나이</th><td>30세 → 33세</td></tr>
       <tr><th>성별</th><td>남성</td></tr>
       <tr><th>신체</th><td>188cm / 86kg</td></tr>
       <tr><th>좋아하는 것</th><td>동양화(東洋畫), 증류주, 우롱차, 튀긴 음식</td></tr>
-      <tr><th>싫어하는 것</th><td>지나치게 밝은 장소, 귀찮은 일, 무능한 부하, 구역 내의 소란</td></tr>
+      <tr><th>싫어하는 것</th><td>너무 밝은 장소, 귀찮은 일, 무능한 부하, 구역 내 소란</td></tr>
       <tr><th>취미</th><td>미술품 감상, 독서, 클래식 보드게임</td></tr>
 
     </table>
@@ -479,7 +479,7 @@
   </div>
 
   <p>
-    <a href="https://sawa1023.github.io/FALL-OF-TITAN/"
+    <a href="https://dante-403.github.io/TheBackstreet/"
        class="green-link" target="_blank">
        The Back street
     </a>
@@ -502,7 +502,7 @@
   </div>
 
   <p>클로 소사이어티 스토리인 3챕터 ‘Nest of Raptors’ 이후부터 등장.</p>
-  <p>애션 패밀리의 콘실리에레인 고드윈의 명령으로, 클로 소사이어티 수뇌부의 ‘Neil’을 찾아가야 하는 플레이어의 신변을 잠시 보호해주는 대신 자잘한 조직 내 업무를 지시한다.</p>
+  <p>애션 패밀리의 콘실리에레인 고드윈의 명령으로, 클로 소사이어티 수뇌부의 ‘Neil’을 찾아온 플레이어의 신변을 잠시 보호해주는 대신 자잘한 임무를 지시한다.</p>
   <p>1~2챕터에서 플레이어가 쌓아온 평판과 3챕터 이후 선택지에 따라 행동이 미세하게 변화한다. 평판과 신뢰도/충성도에 문제가 없다면 조언자로 계속 존재하나, 일정 이상으로 수치가 떨어질 경우 플레이어와의 상호작용과 개인적인 대화가 줄어든다.</p>
   <br><br>
 
@@ -516,7 +516,7 @@
     </div>
   </div>
 
-  <p>평판 수치가 일정 이상 떨어지면 플레이어는 센트럴 로드로부터 스카우트<sup id="ref1"><a href="#fn1">[1]</a></sup>를 제의받으며, ‘화조방 2층 사무실 다섯 번째 서랍의 검은 파일’을 가져오라는 요청을 받는다. 해당 미션을 수락할 경우 ‘은혜를 잊은 자’ 엔딩으로 진입하며, 샤오레이에게서 더 이상 미션을 받을 수 없다.</p>
+  <p>평판 수치가 일정 이상 떨어지면 플레이어는 센트럴 로드로부터 스카우트<sup id="ref1"><a href="#fn1">[1]</a></sup>를 제의받으며, ‘화조방 2층 집무실 다섯 번째 서랍의 검은 파일’을 가져오라는 요청을 받는다. 해당 미션을 수락할 경우 ‘은혜를 잊은 자’ 엔딩으로 진입하며, 샤오레이에게서 더 이상 미션을 받을 수 없다.</p>
   <br><br>
 
   <div class="quote-block">
@@ -547,7 +547,7 @@
 
   <div class="quote-block">
     <div class="quote-main">
-      “오늘 이야기가 어떻게 되든, 당분간은 몸 사리는 편이 낫겠어. 대략… 2주일 정도. 중부의 양반들이 서북부를 또 건드리겠답시고, 오순도순 모여 앉아서 술을 퍼마시고 있거든.”<br>“솔직히 말하자면 우리 쪽은 세력을 더 넓힐 생각이 없어. 내부에서 서로 멱살잡이하는 거 수습하는 것만으로 충분히 골치 아프거든. 그런데 왜 그대들 구역에 와서 이러느냐면, 지금 중부가 제정신이 아닌 상태라서. 이미 들었겠지만 남부의 귀족 나리들도 건드렸고. 서북부가 계속 시끄러우면 동북부도 제대로 못 굴러가.”
+      “오늘 결론이 어떻게 나든, 당분간 몸 사리는 편이 낫겠어. 대략… 2주일 정도. 중부의 양반들이 서북부를 또 건드릴 계획을 짠답시고, 오순도순 모여 앉아서 술을 퍼마시고 있으니까.”<br>“왜 아쉬울 거 없는 우리가 그대들 구역에서 이러느냐면, 지금 중부 놈들이 제정신이 아닌 상태거든. 들었겠지만 남부의 귀족 나리들도 건드렸고. 서북부가 계속 시끄러우면 동북부도 제대로 못 굴러가.”
     </div>
     <div class="quote-sep"></div>
     <div class="quote-sub">
@@ -555,8 +555,8 @@
     </div>
   </div>
 
-  <p>메인 NPC로 격상하며 비중이 대폭 늘어났다. 1편에서는 화조방 간부로서의 모습이 부각되었다면, 2편에서는 클로 소사이어티 협상자로서의 모습이 더 많이 부각된다.</p>
-  <p>센트럴 로드 견제를 위해 애션 패밀리와 일시적으로 협력하게 된 클로 소사이어티의 의장 ‘Chair’의 지시로, ‘라이트하우스’의 리더와 협상하며 첫 등장한다.<sup id="ref1"><a href="#fn1">[2]</a></sup> 이후로 등장하는 장면들 역시 대부분 협상 관련 미션들.</p>
+  <p>메인 NPC로 격상하며 비중이 대폭 늘어났다. 1편에서는 화조방 간부로서의 모습이 부각되었다면, 2편에서는 협상자로서의 모습이 더 많이 부각된다.</p>
+  <p>센트럴 로드 견제를 위해 애션 패밀리와 일시적으로 협력하게 된 클로 소사이어티의 의장 ‘Chair’의 지시로, ‘라이트하우스’의 리더와 협상하며 첫 등장한다.<sup id="ref1"><a href="#fn1">[2]</a></sup> 이후로 등장하는 장면들 역시 대부분 협상과 교섭에 관련된 미션들.</p>
   <br><br>
 
   <div class="quote-block">
@@ -569,8 +569,9 @@
     </div>
   </div>
 
-  <p>3챕터 진입 이후 동북부 구획이 센트럴 로드의 침략을 받게 되며, 상부의 명령에 저격수로 차출되어 플레이어와 함께 미션에 참여한다. 해당 미션의 제목은 ‘One shot’으로, 타 미션과 달리 정밀 사격 정도와 탄환 사용 개수가 미션 성패에 영향을 끼친다.</p>
-  <p>해당 미션 이후 클로 소사이어티와 애션 패밀리 수뇌부의 회담에 참석한다. 여담으로 애션 패밀리가 ‘센트럴 로드에서 올빼미를 최우선 암살 대상 목록에 올렸다’는 정보를 공유하는데, 회담에 참여한 모두가 ‘그럴 것 같았다’는 듯 심드렁하게 반응하는 소소한 개그 씬이 있다. “암살 리스트에 안 올렸으면 그게 더 이상하다”는 샤오레이의 반응이 화룡점정.</p>
+  <p>3챕터 진입 이후 동북부 구획이 센트럴 로드의 침략을 받게 되며, 상부의 명령에 저격수로 차출되어 플레이어와 함께 미션에 참여한다. 미션의 제목은 ‘One shot’으로, 타 미션과 달리 사격의 정밀도와 탄환 사용 개수가 미션 성패에 영향을 끼친다.</p>
+  <p>해당 미션 이후 클로 소사이어티와 애션 패밀리 수뇌부의 회담에 참석한다. 여담으로 애션 패밀리가 ‘센트럴 로드에서 올빼미를 최우선 암살 대상 목록에 올렸다’는 정보를 공유하는데, 회담에 참여한 모두가 ‘그럴 것 같았다’는 듯 심드렁하게 반응하는 소소한 개그 씬이 있다.</p>
+  <p>“암살 리스트에 안 올렸으면 그게 더 이상하다”는 샤오레이의 반응이 화룡점정.</p>
   <br><br>
 
   <div class="quote-block">
@@ -583,7 +584,8 @@
     </div>
   </div>
 
-  <p>애션 패밀리 위주로 진행되는 1편과 달리 클로 소사이어티 개별 엔딩 진행이 가능하다. 평판과 충성도/신뢰도 등의 세부사항에 따라 일선 책임자(Silver bullet)/협상자(Crossway)/협력자(Cooperation) 엔딩으로 나뉜다. 작중 내내 보이던 협상자의 모습과 달리 유들유들해진 샤오레이의 대사를 들을 수 있다.</p>
+  <p>애션 패밀리 위주로 스토리가 진행되는 1편과 달리, 클로 소사이어티 개별 엔딩 진행이 가능하다.</p>
+  <p>평판과 충성도/신뢰도 등의 세부사항에 따라 일선 책임자(Silver bullet) / 협상자(Crossway) / 협력자(Cooperation) 엔딩으로 나뉜다. 작중 내내 보이던 무덤덤한 협상자의 모습과 달리 유들유들해진 샤오레이의 대사를 들을 수 있다.</p>
   <br><br>
 
   <div class="quote-block">
@@ -596,20 +598,22 @@
     </div>
   </div>
 
-  <p>평판 수치가 일정 이상 떨어진 플레이어에게 배신 제의가 들어오는 것은 1편과 동일하다. 5챕터 ‘Ashes to ashes’에서 클로 소사이어티의 내부 회의록을 빼돌릴 경우 즉시 ‘Owl's eye’ 엔딩으로 진입한다. 유일하게 샤오레이가 처형자로 나오는 엔딩.</p>
+  <p>평판 수치가 일정 이상 떨어진 플레이어에게 배신 제의가 들어오는 것은 1편과 동일.</p>
+  <p>5챕터 ‘Ashes to ashes’에서 클로 소사이어티의 내부 회의록을 빼돌릴 경우, 즉시 ‘Owl's eye’ 엔딩으로 진입한다. 이후 회의록을 센트럴 로드 측에 전달하려던 주인공의 뒤를 은밀히 밟은 샤오레이가 플레이어를 사살한다.</p>
+  <p>유일하게 샤오레이가 처형자로 나오는 엔딩이다.</p>
   <br><br>
 
   <h2 id="특징">3. 특징</h2>
-  <p>마피아치고는 꽤 준수한 미청년이라고. 작중 샤오레이에 대한 언급에서 외모에 대한 가십거리<sup id="ref1"><a href="#fn1">[3]</a></sup>를 종종 들을 수 있다. 나이에 비해 조금 젊어 보이는 외모인 듯하다.</p>
-  <p>소지한 라이터나 리볼버, 총알, 펜, 금속 퍼즐 등을 자주 만지작거린다. 손이 심심한 것을 오래 참지 못한다고 한다. 그래서인지는 몰라도 종이접기에 능숙하다고. 특히 학은 정말 잘 접으며, 가끔 테이블 위에 종이학 한두 개가 올려져 있는 경우가 있다. 말버릇은 가까운 사람을 종종 ‘형제’<sup id="ref1"><a href="#fn1">[4]</a></sup>라 칭하는 것. 뒷골목에서의 생존 방식이라나, 뭐라나.</p>
-  <p>의외로 ~~<span style="color:#888;"><i>누워있기 말고</i></span>~~ 소소한 취미가 많은 편. 특히 미술품이나 회화 구경을 좋아한다. 선호하는 종류는 동양화. 다른 취미는 마작, 카드 등의 클래식 보드게임과 독서, 느긋이 차 마시는 것 정도라고.</p>
-  <p>어둠 속에서도 사격이 꽤 능숙하다. 밤눈이 매우 밝은 편이지만, 그만큼 주변이 환하면 금세 눈이 피로해진다고. 밝은 곳에서 잠시 선글라스를 고쳐 쓸 경우 인상을 찡그리는 변화가 보인다.</p>
-  <p>담배를 태우는 모습이 자주 보인다. 헤비스모커.</p>
+  <p>마피아치고는 꽤 준수한 미청년. 작중 샤오레이에 대한 언급에서 외모에 대한 가십<sup id="ref1"><a href="#fn1">[3]</a></sup>을 종종 들을 수 있다. 나이에 비해 조금 젊어 보이는 외모라고.</p>
+  <p>소지한 라이터나 리볼버, 총알, 펜, 금속 퍼즐 등을 자주 만지작거린다. 손이 심심한 것을 오래 참지 못한다고 한다. 그래서인지 종이접기에 능숙한 듯. 특히 학은 정말 잘 접으며, 가끔 테이블 위에 종이학 한두 개가 올려져 있다. 말버릇은 가까운 사람을 종종 ‘형제’<sup id="ref1"><a href="#fn1">[4]</a></sup>라 칭하는 것. 뒷골목에서의 생존 방식이라나, 뭐라나.</p>
+  <p>의외로 <span class="item-note"><i>누워 있기 말고</i></span> 소소한 취미가 많은 편. 특히 미술품이나 회화 구경을 좋아한다. 선호하는 종류는 동양화. 다른 취미는 마작, 카드 등의 클래식 보드게임과 독서, 느긋하게 술이나 차 한 잔 마시는 일 정도.</p>
+  <p>밤눈이 매우 밝아 야간에도 길을 잘 찾으며, 어둠 속에서도 사격이 꽤 능숙하다. 하지만 그만큼 주변이 밝으면 금세 눈이 피로해진다고. 환한 곳에서 잠깐 선글라스를 고쳐 쓸 때면 인상을 찡그리는 표정 변화가 보인다.</p>
+  <p>담배를 태우는 모션이 많다. 헤비스모커.</p>
   <br><br>
 
   <h3 id="외관">3.1. 외관</h3>
-  <p>새까만 흑발, 채도 낮은 녹회색 눈동자, 오른쪽 눈 옆에 찍힌 눈물점이 특징. 반쯤 넘긴 오른쪽 옆머리가 가볍게 땋아져 있다. 갸름한 눈매를 가졌으며, 무표정하게 있을 때는 꽤나 날선 느낌이라고.</p>
-  <p>기본적인 복장은 탕좡(唐裝) 또는 창산(長衫/长衫) 형태의 검은 상의와 바지, ‘원청유청’<sup id="ref1"><a href="#fn1">[5]</a></sup>이라 써 있는 탁한 청록색 외투. 다만 2편인 벤데타에서는 협상자 직무로 인한 정장 차림이 자주 보여졌다.</p>
+  <p>새까만 흑발에 채도 낮은 녹회색 눈동자, 오른쪽 눈 옆에 찍힌 눈물점이 특징. 반쯤 넘긴 오른쪽 옆머리가 가볍게 땋아져 있다. 갸름한 눈매에, 무표정하게 있을 때는 다소 날선 느낌.</p>
+  <p>기본적인 복장은 탕좡(唐裝) 또는 창산(長衫) 형태의 검은 상의와 바지, 흰 글씨로 ‘원청유청’<sup id="ref1"><a href="#fn1">[5]</a></sup>이라 써 있는 탁한 청록색 외투. 다만 2편인 벤데타에서는 협상자의 모습으로 자주 등장하며 정장 차림이 많이 보여졌다.</p>
   <p>하프 팜 형태의 검은 가죽 반장갑과 선글라스<sup id="ref1"><a href="#fn1">[6]</a></sup>, 메탈 재질의 귀걸이<sup id="ref1"><a href="#fn1">[7]</a></sup>가 특징이다.</p>
   <p>탄탄한 체형의 소유자인데다, 워낙 장신이라 비율이 좋은 편. 그러나 반팔은 거의 입지 않는 듯하다.</p>
   <br><br>
@@ -638,7 +642,7 @@
     </div>
   </div>
 
-  <p>가벼운 웃음과 농담, 실없는 소리로 모든 일을 넘겨버리는 성격. 기본적으로 유들유들하고 태연해서인지, 어지간한 일에는 이렇다 할 반응조차 않는다.<sup id="ref1"><a href="#fn1">[8]</a></sup> 여기에 극강의 귀차니즘이 결합되다 보니, 나른하고 무기력한 모습이 많이 보이는 편이다. 외출 이벤트가 있는 다른 NPC들과 달리 늘 뤼화타운에서 마주할 수 있다. 대화 중 취미가 무엇이냐는 질문에 ‘누워 있기’라 대답할 정도. ~~<span style="color:#888;"><i>간부는 대체 어떻게 해먹고 사는 건지 의문</i></span>~~</p>
+  <p>가벼운 웃음과 농담, 실없는 소리로 모든 일을 넘겨버리는 성격. 기본적으로 유들유들하고 태연해서인지, 어지간한 일에는 이렇다 할 반응조차 않는다.<sup id="ref1"><a href="#fn1">[8]</a></sup> 여기에 극강의 귀차니즘이 결합되다 보니, 나른하고 무기력한 모습이 많이 보이는 편이다. 외출 이벤트가 있는 다른 NPC들과 달리 늘 뤼화타운에서 마주할 수 있다. 대화 중 취미가 무엇이냐는 질문에 ‘누워 있기’라 대답할 정도. <span class="item-note"><i>간부는 대체 어떻게 해먹고 사는 건지 의문</i></span></p>
   <br><br>
 
   <div class="quote-block">
@@ -667,7 +671,7 @@
 
     <li>
       <span class="detail-title">Smith & Wesson Model 10</span>
-      간부용 리볼버 권총. 소음기 장착이 까다로워 잘 사용하지 않는다고. 사용하는 모습이 거의 보이지 않다가 2편의 ‘Owl's eye’ 엔딩에서 즉결 처형용으로 사용한다.
+      간부용 리볼버 권총. 소음기 장착이 까다로워 잘 사용하지 않는다고. 2편의 ‘Owl's eye’ 엔딩에서 즉결 처형용으로 사용한다.
     </li>
   <br>
 
@@ -679,20 +683,21 @@
   <br><br>
 
   <h2 id="기타">4. 기타</h2>
-  <p>본명인 ‘샤오레이’보다는 ‘올빼미’ 혹은 ‘21번 협상자’라는 명칭으로 자주 불린다.</p>
   <p>공식적으로 명시되어 있는 호불호 외에도 단것을 선호하지 않는 편인 듯하다.</p>
+  <p>이름인 ‘샤오레이’보다는 별명인 ‘올빼미’ 혹은 ‘21번 협상자’라는 명칭으로 더 자주 불린다.</p>
   <p>서류상의 생일은 8월 6일. 탄생화는 능소화.<sup id="ref1"><a href="#fn1">[9]</a></sup> 그러나 실제 생월일은 아니며, 진짜 생일은 본인도 모른다고 한다.</p>
   <p>성은 한(韓, Hán)으로, 풀네임은 샤오레이 한(鴞藟 韓). 2편에서 정확한 이름이 밝혀진다. 다만 본명은 아니라고.</p>
   <p>영어 외에도 중국어, 약간의 일본어와 이탈리아어를 구사 가능한 것으로 보인다.</p>
+  <p>우호도가 ‘높음’을 초과하여 올라가지 않는 몇 안 되는 주요 NPC 중 하나.</p>
   <br><br>
 
 
-  <h3 id="이스터에그">4.1. 소지품</h3>
+  <h3 id="소지품">4.1. 소지품</h3>
 
   <br>
     <li>
-      <span class="detail-title">궐련 담배 한 갑</span>
-      생필품(…). 일정 이상 신뢰도가 높을 경우 샤오레이가 플레이어에게 담배를 피우냐는 질문을 건넨다. 그렇다고 대답할 시 피우라며 한 개피 건네주는 소소한 이벤트가 있다.
+      <span class="detail-title">궐련 담배</span>
+      생필품(…). 일정 이상의 신뢰도를 충족했을 경우, 플레이어에게 담배를 태우냐는 질문을 건넨다. 그렇다고 대답할 시 하나를 건네주는 소소한 도전과제 겸 이벤트가 있다.
     </li>
 
   <br>
@@ -704,7 +709,7 @@
   <br>
     <li>
       <span class="detail-title">메탈링 퍼즐</span>
-      구부러진 금속 막대 여러 개가 서로 맞물린 모양의 퍼즐. 거의 항상 주머니에 넣고 다니는 듯하지만 정작 풀어 보려는 시도는 잘 하지 않는다. 손이 심심할 때 만지는 용도인 듯.
+      구부러진 금속 막대 여러 개가 서로 맞물린 모양의 퍼즐. 거의 항상 주머니에 넣고 다니는 듯하지만, 정작 풀어 보려는 시도는 잘 하지 않는다. 오로지 손이 심심할 때 만지는 용도인 듯.
     </li>
 
   <br>
@@ -721,12 +726,12 @@
   <br>
     <li>
       <span class="detail-title">1층 응접실 전기난로</span>
-      건드려도 작동하지 않으나, 맵에 랜덤 인카운터되는 고양이가 들어올 경우 켜지는 것을 볼 수 있다. 가장 자주 등장하는 것은 하얀 발의 검은 고양이.
+      건드려도 작동하지 않으나, 맵에 랜덤 인카운터되는 고양이가 들어올 경우 켜지는 것을 볼 수 있다. 가장 자주 등장하는 것은 하얀 발의 검은 고양이. 여담으로 1층 응접실에서 고양이를 일정 횟수 이상 쓰다듬으면 ‘고양이 애호가’ 도전과제가 해금된다.
     </li>
 
   <br>
     <li>
-      <span class="detail-title">2층 사무실 책상 서랍 속 엎어진 사진 액자</span>
+      <span class="detail-title">2층 집무실 책상 서랍 속 엎어진 사진 액자</span>
       조사할 경우 “녹색 눈에 검은 머리칼의, 십 대 중후반 정도로 보이는 여자아이의 사진이다.”라는 문구<sup id="ref1"><a href="#fn1">[10]</a></sup>가 뜬다. 단 해당 이스터에그 열람 시 신뢰도가 하락하니 주의할 것.
     </li>
   </ul>
@@ -773,26 +778,28 @@
   <br>
     <li>
       <span class="detail-title">클로 소사이어티</span>
-      본인 휘하의 단원들과는 그럭저럭 무난하게 지내나, 화조방의 타 간부들과는 마냥 친밀하지만은 않은 듯하다. ‘최연소 간부’, ‘뤼화타운 관리자’, ‘협상자’ 등의 요인에, 샤오레이 본인이 일이 없는 한 뤼화타운에 처박혀 있는 행보가 겹친 탓. 그와 별개로 사교적인 기질 덕인지, 클로 소사이어티 내부에 알고 지내는 사람이 꽤 존재한다.
+      본인 휘하의 단원들과는 그럭저럭 무난하게 지내나, 화조방의 타 간부들과는 마냥 친밀하지만은 않은 듯하다. ‘최연소 간부’, ‘뤼화타운 관리자’, ‘협상자’ 등의 요인에, 샤오레이 본인이 일이 없는 한 뤼화타운 지부에 처박혀 있는 행보가 겹친 탓. 그와 별개로 사교적인 기질 덕인지, 클로 소사이어티 내부에 알고 지내는 사람이 꽤 존재한다.
     </li>
   <br>
 
     <li>
       <span class="detail-title">Harmonia (협상국)</span>
-      가까운 직장 동료. 클로 소사이어티에서도 협상자라는 특수성을 가진 집단이라 무난하게 친한 사이. 다만 말재주로는 으뜸인 사람들이 모이는 곳이라, 서로 말조심을 꽤 하는 모습을 보인다.
+      가까운 직장 동료. 클로 소사이어티에서도 협상자라는 특수성을 가진 집단이라 무난하게 친한 사이. 다만 언변으로는 으뜸인 사람들이 모이는 곳이라서인지, 서로 간에 말조심을 꽤 하는 모습을 보인다.
     </li>
   <br>
 
     <li>
       <span class="detail-title">애션 패밀리</span>
-      애션 패밀리의 콘실리에레인 ‘로베르토 고드윈’과 안면을 튼 사이. 서로 비즈니스적으로는 신뢰하나 못마땅해하는 구석도 있는 듯하다. 샤오레이 왈 ‘꼬장꼬장한 양반’이라고.
+      애션 패밀리의 콘실리에레인 ‘로베르토 고드윈’과 안면을 튼 사이. 서로 비즈니스적으로는 신뢰하나, 은근히 못마땅해하는 구석도 있는 듯하다. 샤오레이 왈 ‘꼬장꼬장한 양반’이라고. 악우 같은 사이.
     </li>
   </ul>
   <br><br>
 
   <h2 id="여담">7. 여담</h2>
   <p>1편에서의 인기로 인해 2편에서의 분량이 대폭 늘어났다는 의혹 아닌 의혹이 있다.</p>
-  <p>2편 시나리오가 절반 이상 풀린 후에야 생일과 풀네임이 공개되었다. 다만 그조차 본명과 실제 생월일이 아니라는 정보에 소소한 원성을 산 모양.</p><br>
+  <p>플레이어에 대한 우호도가 높음 이상으로 올라가지 않는 점 때문에, 주인공의 2층 사무실 출입이 버그라는 루머가 잠시 돌았던 적이 있다.</p>
+  <p>2편 시나리오가 절반 이상 풀린 후에야 생일과 풀네임이 공개되었다. 다만 그조차 본명과 실제 생월일이 아니라는 정보에 소소한 원성을 산 모양.</p>
+  <br><br>
 
 <hr>
 
